email address added

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <span>
               <i class = "fas fa-envelope"></i>
             </span>
-                    <span class="text">safwank734@gmail.com.com</span>
+                    <span class="text">safwank734@gmail.com</span>
                 </div>
             </div>
         </div>
