--- a/contact.html
+++ b/contact.html
@@ -134,26 +134,9 @@
 
 
     <!-- custom js file -->
-    <script src="js/script.js"></script>
-    <script>
-        $("#submit-form").submit((e) => {
-            e.preventDefault()
-            $.ajax({
-                url: "https://script.google.com/macros/s/AKfycbyJtKDXph9GYYq6AECpU1riQjqvEqe__QFhP9vi/exec",
-                data: $("#submit-form").serialize(),
-                method: "post",
-                success: function(response) {
-                    alert("Form submitted successfully")
-                    window.location.reload()
-                        //window.location.href="https://google.com"
-                },
-                error: function(err) {
-                    alert("Something Error")
-
-                }
-            })
-        })
+   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.js">
     </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
