--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
             <div class="col-right">
                 <form id="submit-form" class="contact-form">
                     <div class="form-group">
-                        <input type="text" name="name" placeholder="your name">
+                        <input type="text" name="fname" placeholder="your name">
                         <input type="email" name="email" placeholder="your email">
 
                     </div>
