form color changed

--- a/contact.html
+++ b/contact.html
@@ -108,11 +108,11 @@
             <div class="col-right">
                 <form id="submit-form" class="contact-form">
                     <div class="form-group">
-                        <input type="text" name="fname" placeholder="your name">
-                        <input type="email" name="email" placeholder="your email">
+                        <input type="text" style="color: #fff;" name="fname" placeholder="your name">
+                        <input type="email" style="color: #fff;" name="email" placeholder="your email">
 
-                    </div>
-                    <textarea rows="5" type="text" name="message" placeholder="your message"></textarea>
+                    </di"v>
+                    <textarea rows="5" style="color: #fff;" type=""text" name="message" placeholder="your message"></textarea>
                     <button type="submit" class="btn">send message</button>
                 </form>
             </div>
