--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="row-right">
                 <div class="img-border">
                     <div class="img-container">
-                        <img src="assets/iii.png" alt="my photo">
+                        <img src="" alt="my photo">
                     </div>
                 </div>
             </div>
